# mcp-oauth-server

./: .env.example  .gitignore  .pair-programming-session.md  .project-structure.md  .todos-report.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.claude/: launch.json
docs/: ROADMAP.md  mcp-audit-2026-04-22.md  mcp-audit-fix-plan.md  per-user-mcp-credentials.md  per-user-oauth-billing.md  saas-mcp-development-guide.md  telegram-bot-runbook.md
mcp_oauth_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: 2026-04-14_users_decouple.sql  2026-05-12_mcp_categories.sql  2026-05-12_setup_tokens_and_agent_tokens.sql  2026-05-14_client_mcp_credentials.sql  2026-05-14_public_oauth_clients.sql  2026-05-14_user_mcp_configs.sql  2026-05-15_add_mcp_tool_count.sql  2026-05-15_category_icon.sql  2026-05-15_credit_costs_and_topup_requests.sql  2026-05-15_landing_tables.sql  2026-05-15_mcp_tools.sql  2026-05-15_split_mcp_descriptions.sql  2026-05-15_telegram_settings_category.sql  2026-05-15_topup_packages.sql  2026-05-20_pricing_model.sql  2026-05-20_setup_token_purpose.sql  2026-05-20_social_oauth.sql  2026-05-20_social_oauth_settings.sql  2026-05-20_user_ms_graph_tokens.sql  2026-05-21_mcp_stateful_flag.sql  2026-06-10_missing_oauth_usage_schema.sql
src/: cache.py  config.py  crypto.py  email.py  models.py  telegram.py
tests/: test_cache.py  test_candidate_urls.py  test_gateway_admin_flag.py  test_gateway_caches.py  test_gateway_deduct_credits.py  test_introspect_deduction.py  test_misdirected_error.py  test_token_cache.py  (+4 more)
(+122 files in other folders)
